@@ -2,8 +2,8 @@
 #include "exit.h"
 #include "syserr.h"
 
-void syserr_warn(const char *x1, const char *x2, const char *x3, 
-                 const char *x4, const char *x5, const char *x6,
+void syserr_warn(const char *x1, const char *x2, const char *x3, const char *x4,
+                 const char *x5, const char *x6, const char *x7, const char *x8,
                  struct syserr *se)
 {
   syserr_init();
@@ -14,6 +14,8 @@ void syserr_warn(const char *x1, const char *x2, const char *x3,
   if (x4) buffer_puts(buffer2, x4);
   if (x5) buffer_puts(buffer2, x5);
   if (x6) buffer_puts(buffer2, x6);
+  if (x7) buffer_puts(buffer2, x7);
+  if (x8) buffer_puts(buffer2, x8);
  
   while(se) {
     if (se->x) buffer_puts(buffer2, se->x);
@@ -26,10 +28,10 @@ void syserr_warn(const char *x1, const char *x2, const char *x3,
   buffer_flush(buffer2);
 }
 
-void syserr_die(int e, const char *x1, const char *x2, const char *x3, 
-                       const char *x4, const char *x5, const char *x6,
+void syserr_die(int e, const char *x1, const char *x2, const char *x3, const char *x4,
+                       const char *x5, const char *x6, const char *x7, const char *x8,
                        struct syserr *se)
 {
-  syserr_warn(x1, x2, x3, x4, x5, x6, se);
+  syserr_warn(x1, x2, x3, x4, x5, x6, x7, x8, se);
   _exit(e);
 }
