@@ -245,3 +245,4 @@
 20070408 code: array_data.o was not being compiled. fixed.
 20070408 code: cleaned up alloc.c and added alloc_zero().
 20070409 code: API changes for hashtable. cleanups.
+20070409 code: syserr updated to allow eight string arguments instead of six.
